# monolithic-aclgad-sim

./: .gitignore
Garfield_test/: .gitignore  1000MIPs.cpp  CMakeLists.txt  attempt.cpp  lgad.cpp  lgad_tools.cpp  lgad_tools.hh  main.cpp  mesh_visualization_silvaco.cpp  planar_movie.cpp  plot_avalanche.cpp  probe_field.cpp  probe_mesh.cpp  silvaco_reader.py  test_silvaco.cpp  test_silvaco_Efield.cpp
Garfield_test/lgad.cpp-output/output_files_150V/: efield_full.csv  eh_sizes_grant_150V.txt  eh_sizes_massey_150V.txt  eh_sizes_okuto_150V.txt  eh_sizes_vodm_150V.txt  ge_sizes_grant_150V.txt  ge_sizes_massey_150V.txt  ge_sizes_okuto_150V.txt  ge_sizes_vodm_150V.txt  mip_pairs_150V.csv  mip_summary.csv  primary_pairs_150V.txt  profile_150V.csv  results.csv  signal_150V.csv  validity_map.csv
Garfield_test/lgad.cpp-output/output_files_180V/: efield_full.csv  eh_sizes_grant_180V.txt  eh_sizes_massey_180V.txt  eh_sizes_okuto_180V.txt  eh_sizes_vodm_180V.txt  ge_sizes_grant_180V.txt  ge_sizes_massey_180V.txt  ge_sizes_okuto_180V.txt  ge_sizes_vodm_180V.txt  mip_pairs_180V.csv  mip_summary.csv  primary_pairs_180V.txt  profile_180V.csv  results.csv  signal_180V.csv
Garfield_test/lgad.cpp-output/output_files_190V/: efield_full.csv  eh_sizes_grant_190V.txt  eh_sizes_massey_190V.txt  eh_sizes_okuto_190V.txt  eh_sizes_vodm_190V.txt  ge_sizes_grant_190V.txt  ge_sizes_massey_190V.txt  ge_sizes_okuto_190V.txt  ge_sizes_vodm_190V.txt  mip_pairs_190V.csv  mip_summary.csv  primary_pairs_190V.txt  profile_190V.csv  results.csv  signal_190V.csv
si_tutorial/: CMakeLists.txt  lgad_test.cpp  main.cpp
