cmake_minimum_required(VERSION 3.10)
project(silvaco_parse)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(Garfield REQUIRED)
add_executable(test_silvaco test_silvaco.cpp)
target_link_libraries(test_silvaco Garfield::Garfield)
add_executable(test_silvaco_Efield test_silvaco_Efield.cpp)
target_link_libraries(test_silvaco_Efield Garfield::Garfield)
add_executable(mesh_visualization_silvaco mesh_visualization_silvaco.cpp)
target_link_libraries(mesh_visualization_silvaco Garfield::Garfield)
add_executable(main main.cpp)
target_link_libraries(main Garfield::Garfield)