cmake_minimum_required(VERSION 3.10)
project(silvaco_parse)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(Garfield REQUIRED)
find_package(OpenMP REQUIRED)
# add_executable(test_silvaco test_silvaco.cpp)
# target_link_libraries(test_silvaco Garfield::Garfield)
add_executable(test_silvaco_Efield test_silvaco_Efield.cpp)
target_link_libraries(test_silvaco_Efield Garfield::Garfield)
add_executable(probe_mesh probe_mesh.cpp)
target_link_libraries(probe_mesh Garfield::Garfield)
add_executable(main main.cpp lgad_tools.cpp)
target_link_libraries(main Garfield::Garfield)
add_executable(probe_field probe_field.cpp)
target_link_libraries(probe_field Garfield::Garfield)
# add_executable(plot_avalanche plot_avalanche.cpp)
# target_link_libraries(plot_avalanche Garfield::Garfield)
# add_executable(planar_movie planar_movie.cpp)
# target_link_libraries(planar_movie Garfield::Garfield)
# add_executable(attempt attempt.cpp)
# target_link_libraries(attempt Garfield::Garfield)
add_executable(1000MIPs 1000MIPs.cpp)
target_link_libraries(1000MIPs Garfield::Garfield OpenMP::OpenMP_CXX)