cmake_minimum_required(VERSION 3.10)
project(Si_Test)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(Garfield REQUIRED)
# add_executable(si_det si_det.cpp)
# target_link_libraries(si_det Garfield::Garfield)
add_executable(lgad_test lgad_test.cpp)
target_link_libraries(lgad_test Garfield::Garfield)
add_executable(main main.cpp)
target_link_libraries(main Garfield::Garfield)